plain express + jwt variant

--- a/example/views/index.html
+++ b/example/views/index.html
@@ -45,6 +45,10 @@
       <li>
         <a href="#" onclick="spa('/passport/jwt')">Login with Passport + JWT (using @criipto/auth-js)</a>
       </li>
+
+      <li>
+        <a href="#" onclick="spa('/plain/jwt')">Login with plain Express + JWT (using @criipto/auth-js)</a>
+      </li>
     </ul>
     <pre id="response"></pre>
   </body>
