--- a/example/views/index.html
+++ b/example/views/index.html
@@ -43,9 +43,14 @@
         <a href="/passport/redirect">Login with Passport + Redirect</a>
       </li>
       <li>
+        <a href="/passport/protected">Access Passport (redirect) protected route</a>
+      </li>
+      <li>
+        <a href="/passport/logout">Logout with Passport</a>
+      </li>
+      <li>
         <a href="#" onclick="spa('/passport/jwt')">Login with Passport + JWT (using @criipto/auth-js)</a>
       </li>
-
       <li>
         <a href="#" onclick="spa('/plain/jwt')">Login with plain Express + JWT (using @criipto/auth-js)</a>
       </li>
