--- a/example/views/index.html
+++ b/example/views/index.html
@@ -40,7 +40,7 @@
     </p>
     <ul>
       <li>
-        <a href="/passport/redirect">Login with Passport + Redirect</a>
+        <a href="/passport/redirect?prompt=login">Login with Passport + Redirect</a>
       </li>
       <li>
         <a href="#" onclick="spa('/passport/jwt')">Login with Passport + JWT (using @criipto/auth-js)</a>
@@ -57,7 +57,7 @@
         <a href="#" onclick="spa('/plain/jwt')">Login with plain Express + JWT (using @criipto/auth-js)</a>
       </li>
       <li>
-        <a href="/plain/redirect">Login with plain Express + Redirect</a>
+        <a href="/plain/redirect?prompt=login">Login with plain Express + Redirect</a>
       </li>
       <li>
         <a href="/plain/protected">Access plain Express (redirect) protected route</a>
