--- a/example/views/index.html
+++ b/example/views/index.html
@@ -21,6 +21,14 @@
             }
           });
         })
+        .then(response => {
+          if (response.status >= 400) {
+            return response.text().then(text => {
+              throw new Error(response.status + ': '+text);
+            });
+          }
+          return respomse
+        })
         .then(response => response.json())
         .then(payload => {
           console.log(payload);
